<?xml version="1.0"?>
<package format="2">
  <name>flow_tank</name>
  <version>0.0.0</version>
  <description>The flow_tank package</description>

  <maintainer email="ws@todo.todo">ws</maintainer>

  <!-- Specify the license type (e.g., MIT) -->
  <license>MIT</license>

  <!-- Define package dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>stm_interface</build_depend>  <!-- Add message_generation for service messages -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>stm_interface</exec_depend>  <!-- Add message_runtime for service messages -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
